crates/bitnet-generation/tests/snapshots/snapshot_wave33__w33_check_stop_stop_token_hit_debug.snap
---
source: crates/bitnet-generation/tests/snapshot_wave33.rs
expression: result
---
Some(
    StopTokenId(
        42,
    ),
)
