crates/bitnet-generation/tests/snapshots/snapshot_wave33__w33_generation_config_default_json.snap
---
source: crates/bitnet-generation/tests/snapshot_wave33.rs
expression: json
---
{
  "max_new_tokens": 128,
  "seed": null,
  "stop_criteria": {
    "stop_token_ids": [],
    "stop_strings": [],
    "max_tokens": 0,
    "eos_token_id": null
  }
}
