crates/bitnet-generation/tests/snapshots/snapshot_wave33__w33_generation_stats_populated_debug.snap
---
source: crates/bitnet-generation/tests/snapshot_wave33.rs
expression: stats
---
GenerationStats {
    tokens_generated: 128,
    tokens_per_second: 23.7,
}
