crates/bitnet-generation/tests/snapshots/snapshot_wave33__w33_generation_stats_zero_json.snap
---
source: crates/bitnet-generation/tests/snapshot_wave33.rs
expression: json
---
{
  "tokens_generated": 0,
  "tokens_per_second": 0.0
}
