crates/bitnet-generation/tests/snapshots/snapshot_wave33__w33_stop_criteria_empty_json.snap
---
source: crates/bitnet-generation/tests/snapshot_wave33.rs
expression: json
---
{
  "stop_token_ids": [],
  "stop_strings": [],
  "max_tokens": 0,
  "eos_token_id": null
}
