crates/bitnet-generation/tests/snapshots/snapshot_wave33__w33_stop_criteria_full_json.snap
---
source: crates/bitnet-generation/tests/snapshot_wave33.rs
expression: json
---
{
  "stop_token_ids": [
    128009,
    2
  ],
  "stop_strings": [
    "</s>",
    "\n\nQ:"
  ],
  "max_tokens": 256,
  "eos_token_id": 2
}
